@@ -3,6 +3,7 @@
 	- Fix modstack_call_init to use the original string when it has
 	  changed, to call modstack_config with. And skip the changed name
 	  in the string correctly. Thanks to Jan Komissar.
+	- Neaten up the change in acx_nlnetlabs.m4 to version 49.
 
 26 September 2025: Yorgos
 	- Test for nonstring attribute in configure and add
